[tool.poetry]
name = "netcam-aionxapi"
version = "0.0.2"
description = "NetCAD driver for NX-OS NXAPI (asyncio)"
readme = "README.md"
authors = ["Jeremy Schulman"]

[tool.poetry.dependencies]
python = "^3.10"
aio-nxapi = "*"
netcad = {path = "../netcadcam"}

[tool.poetry.dev-dependencies]
pytest = "*"
invoke = "*"
black = "*"
flake8 = "*"
flake8-breakpoint = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pre-commit = "*"
interrogate = "*"


[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
