[tool.poetry]
    name = "netcam-aionxapi"
    version = "0.1.5"
    description = "NX-OS NXAPI (asyncio) driver for NetCAD/CAM"
    readme = "README.md"
    authors = ["Jeremy Schulman"]

[tool.poetry.dependencies]
    python = "^3.10"
    aio-nxapi = "^0.5.2"
    netcad = ">=0.8.2"

[tool.poetry.dev-dependencies]
    pytest = "*"
    invoke = "*"
    black = "*"
    flake8 = "*"
    pytest-cov = "*"
    pytest-asyncio = "*"
    pre-commit = "*"
    interrogate = "*"

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]


[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
